# guardyn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  docker-compose.dev.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  desktop-build.disabled.yml  desktop-build.yml  desktop-ci.yml  release.yml  security.yml  test.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  deny.toml
backend/crates/call-service/: Cargo.toml  build.rs
backend/crates/call-service/src/: auth_client.rs  db.rs  handlers.rs  main.rs  nats.rs  service.rs  session.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  error.rs  events.rs  kafka.rs  lib.rs  observability.rs  rate_limit.rs  rate_limit_middleware.rs
backend/crates/crypto/: Cargo.toml
backend/crates/crypto-ffi/: Cargo.toml  README.md  build-mobile.sh  flutter_rust_bridge.yaml
backend/crates/crypto-ffi/src/: api.rs  frb_generated.rs  lib.rs
backend/crates/crypto/benches/: crypto_benchmarks.rs
backend/crates/crypto/src/: double_ratchet.rs  ffi.rs  frb_generated.rs  key_storage.rs  lib.rs  mls.rs  mls_tests.rs  padding.rs  pqxdh.rs  sealed_sender.rs  x3dh.rs  x3dh_conversion_tests.rs
backend/crates/crypto/tests/: integration_tests.rs
backend/crates/notification-service/: Cargo.toml  build.rs
backend/crates/notification-service/src/: db.rs  handlers.rs  main.rs  push.rs  service.rs
backend/proto/: auth.proto  messaging.proto
client-desktop/: .eslintrc.json  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
client-desktop/e2e/: README.md  auth.test.ts  media.test.ts  smoke.test.ts
client-desktop/scripts/: build-linux.sh  build-release.sh  run-auth-tests.sh  setup.sh
client-desktop/src/: App.tsx  index.tsx
client-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client-desktop/src-tauri/capabilities/: default.json
client-desktop/src-tauri/icons/: README.md
client-desktop/src-tauri/src/: grpc.rs  lib.rs  main.rs  state.rs  tray.rs  window_state.rs
client-desktop/src-tauri/src/commands/: auth.rs  calls.rs  crypto.rs  downloads.rs  groups.rs  media.rs  messaging.rs  mls.rs  mod.rs  settings.rs  tests.rs  websocket.rs
client-desktop/src-tauri/src/proto/: guardyn.auth.rs  guardyn.calls.rs  guardyn.media.rs  guardyn.messaging.rs  guardyn.notifications.rs  guardyn.presence.rs  mod.rs
client-desktop/src-tauri/src/services/: auth_client.rs  calls_client.rs  media_client.rs  messaging_client.rs  mod.rs  presence_client.rs  secure_storage.rs
client-desktop/src-tauri/src/webrtc/: call_manager.rs  mod.rs  peer_connection.rs  screen_capture.rs  sframe.rs
client-desktop/src/api/: auth.test.ts  auth.ts  calls.test.ts  calls.ts  crypto.ts  index.ts  media.test.ts  media.ts  messaging.test.ts  messaging.ts  mls.ts  settings.test.ts  settings.ts  tray.test.ts  tray.ts  users.ts  websocket.mock.ts  websocket.ts  websocket.types.ts  window.test.ts  window.ts
client-desktop/src/api/__mocks__/: websocket.mock.ts  websocket.ts
client-desktop/src/components/: Accessibility.tsx  ErrorHandling.test.tsx  ErrorHandling.tsx  IncomingCall.test.tsx  IncomingCall.tsx  KeyboardShortcuts.tsx  NetworkStatus.tsx  ProfileSection.tsx  ResponsiveLayout.tsx  Sidebar.test.tsx  Sidebar.tsx  Skeleton.tsx  ThemeSwitcher.tsx  UserSearch.tsx  index.ts
client-desktop/src/components/auth/: AuthLayout.test.tsx  AuthLayout.tsx  ErrorAlert.test.tsx  ErrorAlert.tsx  FormInput.test.tsx  FormInput.tsx  PasswordStrength.test.tsx  PasswordStrength.tsx  SubmitButton.test.tsx  SubmitButton.tsx  index.ts
client-desktop/src/components/chat/: ConversationActions.tsx  ConversationItem.tsx  ConversationList.tsx  DownloadList.tsx  EmojiPicker.tsx  ForwardModal.tsx  ImagePreviewModal.tsx  MediaAttachment.tsx  MessageBubble.tsx  MessageInput.tsx  MessageStatusIndicator.tsx  NewConversationModal.tsx  QuotedMessage.tsx  ReactionMenu.tsx  index.ts
client-desktop/src/components/media/: MediaGallery.test.ts  MediaGallery.tsx  MediaPicker.test.ts  MediaPicker.tsx  MediaPreview.test.ts  MediaPreview.tsx  MediaViewer.test.ts  MediaViewer.tsx  UploadProgress.test.ts  UploadProgress.tsx  index.ts
client-desktop/src/components/shared/: Avatar.tsx  Badge.tsx  Button.tsx  E2EEIndicator.tsx  EmptyState.tsx  LazyImage.tsx  LazyRoute.tsx  PresenceIndicator.tsx  Shimmer.tsx  TextInput.tsx  TypingIndicator.tsx  VirtualList.tsx  index.ts
client-desktop/src/contexts/: ThemeContext.tsx
client-desktop/src/design/: index.ts  shadows.ts  tokens.ts
client-desktop/src/hooks/: index.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useTray.test.ts  useTray.ts
client-desktop/src/pages/: Call.test.tsx  Call.tsx  CallHistory.tsx  Chat.test.tsx  Chat.tsx  Login.test.tsx  Login.tsx  LoginNew.tsx  Profile.tsx  Register.test.tsx  Register.tsx  RegisterNew.tsx  Settings.test.tsx  Settings.tsx
client-desktop/src/pages/groups/: AddMemberDialog.tsx  GroupChat.tsx  GroupCreate.tsx  GroupInfo.tsx  GroupList.tsx  index.ts
client-desktop/src/services/: callAudioService.ts  downloadManager.ts  encryption.ts  groupEncryption.ts  presenceService.ts
client-desktop/src/stores/: conversationStore.ts  index.ts  messageStore.ts  presenceStore.ts
client-desktop/src/styles/: index.css
client-desktop/src/test/: setup.ts  setup.tsx
client-desktop/src/types/: index.test.ts  index.ts
client-mobile/: .gitignore  README.md  TESTING.md  envoy-local.yaml  flutter_rust_bridge.yaml  pubspec.yaml
docs/: APP_STORE_SUBMISSION.md  ARCHITECTURE.md  CLIENT_TESTING_GUIDE.md  DATABASE_SCHEMA.md  DESIGN_SYSTEM.md  DESKTOP_DISTRIBUTION.md  DEVELOPER_QUICKSTART.md  DOCKER_DEV_GUIDE.md  ENCRYPTION_ARCHITECTURE.md  GRPC_API.md  IMPLEMENTATION_PLAN.md  MOBILE_FFI_TESTING_PLAN.md  PORT_MAPPING.md  PRODUCTION_DEPLOYMENT.md  RUST_FFI_INTEGRATION.md  RUST_FFI_STATUS.md  TESTING_GUIDE.md  TWO_CLIENT_QUICK_START.md  TWO_CLIENT_TESTING.md  mvp_discovery.md
landing/: index.html
(+405 files in other folders)
