[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guardyn Team"]
license = "MIT"

[workspace.dependencies]
# Guardyn crypto (shared with backend)
guardyn-crypto = { path = "../backend/crates/crypto", features = ["ffi"] }

# Tauri
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-build = "2.0"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC client
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# WebRTC
webrtc = "0.13"
webrtc-ice = "0.13"
webrtc-dtls = "0.10"
webrtc-srtp = "0.14"
webrtc-media = "0.9"

# HTTP client for signaling
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# State management
parking_lot = "0.12"
dashmap = "6"

# Keyring for secure credential storage
keyring = "3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Base64
base64 = "0.22"

# Hex encoding
hex = "0.4"

# Bytes
bytes = "1"

# System directories
dirs = "5"

# MLS (Messaging Layer Security) for groups
openmls = "0.6"
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"
tls_codec = "0.4"

# Screen capture (cross-platform: Linux X11/Wayland, macOS, Windows)
xcap = "0.3"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["png"] }
