[package]
name = "guardyn-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Guardyn Desktop Client - Secure E2EE Messenger"

[build-dependencies]
tauri-build = { workspace = true, features = [] }
tonic-build = { workspace = true }

[dependencies]
# Tauri core
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-process = { workspace = true }

# Guardyn crypto
guardyn-crypto = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# WebRTC
webrtc = { workspace = true }
webrtc-ice = { workspace = true }
webrtc-media = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# State
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Secure storage
keyring = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Futures
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }

# Base64/Bytes/Hex
base64 = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }

# System directories
dirs = { workspace = true }

# MLS (Messaging Layer Security) for groups
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
tls_codec = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "guardyn_desktop"
