[package]
name = "guardyn-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["nats"]
# NATS messaging (legacy, being phased out)
nats = ["async-nats"]
# Kafka/Redpanda messaging (new)
kafka = ["rdkafka", "futures"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
opentelemetry-semantic-conventions = "0.27"

# Messaging
async-nats = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }

# Rate limiting
parking_lot = "0.12"

# gRPC middleware
http = "1.0"
tonic = "0.12"
tower = "0.4"
pin-project = "1.0"
# Events
uuid = { version = "1.0", features = ["v4"] }
