[package]
name = "guardyn-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified cryptography core for Guardyn - X3DH, Double Ratchet, MLS, PQXDH"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["std"]
std = []
# Post-quantum hybrid encryption (ML-KEM + X25519)
pq = ["ml-kem"]
# FFI bindings for Flutter/Tauri
ffi = ["chacha20poly1305"]
# SFrame for voice/video E2EE
sframe = []

[dependencies]
# Workspace dependencies
guardyn-common = { path = "../common" }
thiserror.workspace = true
serde.workspace = true

# MLS for group chat E2EE
openmls.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
openmls_basic_credential.workspace = true

# Curve25519 for key exchange
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek = "4"

# Core crypto primitives
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = { version = "0.10", optional = true }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.5"  # Constant-time operations

# Post-quantum cryptography (ML-KEM / Kyber)
ml-kem = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
hex = "0.4"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "crypto_benchmarks"
harness = false
