[package]
name = "guardyn-notification-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
guardyn-common = { path = "../common" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
config.workspace = true
scylla.workspace = true
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber.workspace = true
web-push = "0.11"
base64 = "0.22"

[build-dependencies]
tonic-build.workspace = true
